Update HTMLMediaElement's index of cues when TextTrack.mode changes to and from TextTrack::DISABLED. https://bugs.webkit.org/show_bug.cgi?id=83377

Reviewed by Eric Carlson.

Source/WebCore:

No new tests. Instead updated media/track/track-mode.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::textTrackModeChanged):
    Add the track's cues to the index when the mode changes to HIDDEN or SHOWING.

* html/HTMLTrackElement.cpp:
(WebCore::HTMLTrackElement::textTrackRemoveCues):
    Fix a copy pasta error.

* html/track/TextTrack.cpp:
(WebCore::TextTrack::setMode):
    Remove the track's cues from the index when the mode changes to DISABLED.

LayoutTests:

* media/track/track-mode-expected.txt:
* media/track/track-mode.html:


Canonical link: https://commits.webkit.org/101321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114026 268f45cc-cd09-0410-ab3c-d52691b4dbfc